assets/css/style.css
/* ******************* Initialisation du css ******************* */
* {
    box-sizing: border-box;
    font-family: sans-serif;
    font-weight: 300;
    margin:0;
    padding:0;
}

html, body {
    margin: 0;
    max-width: 100vw;
    width:100%;
    background:#131313;
    height:200vh;
}
/* =============================================================== */
/* ********************** Style des polices ********************** */
h1{
    font-weight: 500;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color:#fff;
    font-size:3rem;
    overflow:hidden;
    position:relative;
}

/* =============================================================== */
/* ********************** Style de l'entête ********************** */

header{
    height: 20vh;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: flex-start;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
}
header{
    height: 20vh;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: stretch;
    box-sizing: border-box;
}
/* ****************************** logo ****************************** */
.logoBox{
    max-width:15.625rem;
    aspect-ratio: 500/300;
    margin: 2vh 10vw 0 0;
}

.logo{
    max-width:100%;
    width:100%;
    aspect-ratio: 500/300;
}


/* ***************** Style du Menu Burger ***************** */
/*burger*/
.burgerContainer{
    z-index: 0;
    width: 80px;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: center;
    align-items: center;
    justify-content: center;
    position: absolute;
    border-radius: 15px;
    transition: all 250ms cubic-bezier(0.23, 1, 0.32, 1);
    text-align: center;
    border: 2px solid #fff;
    padding: 50px;
    transform: scale(0.5);
}
.burgerContainer:hover{
    transform: scale(0.9);
    cursor:pointer;
}
.burger{
    width: 80px;
    bottom: 50%;
    content: '';
    left: 50%;
    position: absolute;
    border-bottom: 5px solid #fff;
    transform: translate(-50%,50%);
    border-radius: 50px;
}
.burger::before{
    z-index: 1;
    border-bottom: 5px solid #fff;
    position: absolute;
    top: 30px;
    left: 0;
    content: '';
    width: 80px;
    height: auto;
    border-radius: 50px;
}
.burger::after{
    z-index: 1;
    border-bottom: 5px solid #fff;
    position: absolute;
    top: -30px;
    left: 0;
    content: '';
    width: 80px;
    height: auto;
    border-radius: 50px;
}

/* Style de la barre de navigation */
.mainNav{
    z-index: 0;
    width: 22rem;
    min-width: 22rem;
    position: relative;
    display: flex;
    padding: 2vh 2vw 0 2vw;
    height: 100vh;
    background: #1a1a1a;
    border-right: #B0C741 thin solid;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: center;
    transform: translateX(-100%);
    transition:all 150ms linear;
}

.navigationMenu{
    z-index: 1;
    position:relative;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    list-style-type: none;
    max-width:100%;
    width:20rem;
    max-height: 100%;
    top: 200px;
    left: 0;
    margin: 2vh 0;
}

.navigationMenuLink{
    z-index: 2;
    max-width:100%;
    width:100%;
    border-bottom: solid 1px #fff;
    padding : 1rem 2rem;
    background:#B0C741;
    color:#fff;
    transition: all 200ms ease-in-out;
}

.navigationMenu li:hover{
    background:#fff;
    color:#B0C741;
    cursor:pointer;
}
.closerBtn{
    z-index: 5;
    position:absolute;
    top: 1rem;
    left: 15vw;
    color:#fff;
    display:inline-block;
}
.closerBtn p{
    display:inline-block;
    color:#fff;
    font-size:0.75rem;
    margin: 0 1.75rem;
}
.closeBtn{
    display:flex;
    width:1rem;
    height:1rem;
    top:0;
    right:0;
    position:relative;
    align-self: flex-start;
    justify-content:flex-end;
    padding:3px;
    border:thin solid #fff;
    transition:all 250ms cubic-bezier(.73,-0.66,.2,1.67);
}
.closeBtn::before{
    content:'|';
    position:absolute;
    bottom:-30%;
    left:30%;
    transform:rotate(45deg);
    width:1rem;
    height:1rem;
    transform-origin:center center;
    color:#fff;
}
.closeBtn::after{
    content:'|' ;
    position:absolute;
    top:-50%;
    right:-30%;
    transform:rotate(315deg);
    width:1rem;
    height:1rem;
    transform-origin:center center;
    color:#fff
}
.closeBtn:hover{
    text-shadow: 0 0 5px #fff;
    transform: scale(1.5);
    cursor:pointer;
}
.closeBtn:active{
    transform: scale(1.0);
    cursor:pointer;
}

/* ================================================================= */
/* **************************** Sidebar **************************** */

aside{
    display:flex;
    flex-direction:column;
    max-width:20vw;
    width:100%;
    margin:0 1vw;
    background:#b066ec;
    border-radius: 10px;
}
.leftNav{
    display:block;
    padding:1rem;
    background-color:#9c5ad1
}
.leftNavUl{
    background-color:#8b51bb;
    list-style:none;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: space-around;
    align-items: flex-start;
    padding:3rem 1rem 2rem 1rem;
}
.leftNavUlLi{
    background-color:#af51bb;
    padding: 1rem;
    margin: 1rem auto;
    position:relative;
    transition: all 200ms linear;
}
.leftNavUlLi:hover{
    background-color:#af51bb;
    transform:scale(1.1);
    box-shadow: 0 0 5px #000;
    cursor:pointer;
}

.leftNavUlLi a{
    background-color:#af51bb;
    color:#FFF;
    text-decoration:none;
    position:relative;
}
.hasChildren ul{
    display:none;
}

.hasChildren a{
    position:relative;
}

.leftNavUlLi::before{
    position:absolute;
    content: url('/assets/img/angles-right-solid.png.png');
    margin-right: 6px;
    color:#FFF;
    top:50%;
    left: -2rem;
    width: 1rem;
    height: 1rem;
    font-size: 1rem;
    transform: translateY(-50%);
}
.hasChildren::after{
    z-index: 10;
    position:absolute;
    content: url('/assets/img/angles-down-solid.png.png');
    margin-right: 6px;
    color:#000;
    top:50%;
    right: -2rem;
    width: 1rem;
    height: 1rem;
    font-size: 1rem;
    transform: translateY(-50%);
}
/* ================================================================= */
/* ************************* Main Conainer ************************* */

main{
    display:grid;
    grid-template-columns:2fr 10fr;
    max-width: 99vw;
    width:100%;
    margin:auto;
    gap:2.5rem;
}

/* ************************** Main Section ************************** */
section#mainSection{
    display:flex;
    max-width:100%;
    width:100%;
    margin:auto;
    padding-left:12vw;
    background-color: #fff;
    overflow: hidden;
    padding:2rem;
    height:70vh;
    border-radius:8px;
}
.btn{
    display:block;
    width:200px;
    border-radius:5px;
    padding: 0.5rem 0.8rem;
    font-weight:500;
    color:#131313;
    background-color:#d4d4d4;
    text-align: center;
}
.btn:hover{
    font-weight:700;
    color:#fff;
    background-color:#424242;
    box-shadow: 0 0 5px #fff;
    cursor:pointer;
}

.btn:active{
    color:#B0C741;
    background-color:#FFF;
    box-shadow: inset 0 0 5px #000;
    cursor:pointer;
}

/* **************************************************************** */
/* ******************* CSS to Use in Javascript ******************* */
.hide{
    display:none;
}

.show{
    display:block;
}

.showMenu{
    transform:translateX(0);
}

